<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/underwater"
    android:padding="@dimen/small_space"
    tools:context="com.example.android.theshapeofwaterquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/small_space">

        <TextView
            style="@style/HeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/huge_space"
            android:paddingTop="@dimen/tiny_space"
            android:text="@string/question" />

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:text="@string/director_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/name_submitted"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint" />

        </LinearLayout>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/movies" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/hellboy"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hellboy" />

            <RadioButton
                android:id="@+id/the_orphanage"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_orphanage" />

            <RadioButton
                android:id="@+id/cronos"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cronos" />

            <RadioButton
                android:id="@+id/pans_labyrinth"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pans_labyrinth" />

        </RadioGroup>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/disabilities" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/mute"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute" />

            <RadioButton
                android:id="@+id/dyslexic"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dyslexic" />

            <RadioButton
                android:id="@+id/deaf"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deaf" />

            <RadioButton
                android:id="@+id/autistic"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autistic" />

        </RadioGroup>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/genres" />

        <CheckBox
            android:id="@+id/biography"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biography" />

        <CheckBox
            android:id="@+id/fantasy"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fantasy" />

        <CheckBox
            android:id="@+id/science_fiction"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/science_fiction" />

        <CheckBox
            android:id="@+id/drama"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drama" />

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/audiences" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/audiences_true"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_true" />

            <RadioButton
                android:id="@+id/audiences_false"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_false" />

        </RadioGroup>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/traits" />

        <CheckBox
            android:id="@+id/harmless"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harmless" />

        <CheckBox
            android:id="@+id/amphibious"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amphibious" />

        <CheckBox
            android:id="@+id/healing"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healing" />

        <CheckBox
            android:id="@+id/intelligent"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intelligent" />

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/decades" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/forties"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forties" />

            <RadioButton
                android:id="@+id/sixties"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixties" />

            <RadioButton
                android:id="@+id/eighties"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eighties" />

            <RadioButton
                android:id="@+id/two_thousands"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_thousands" />

        </RadioGroup>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/origins" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/australia"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/australia" />

            <RadioButton
                android:id="@+id/africa"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/africa" />

            <RadioButton
                android:id="@+id/europe"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/europe" />

            <RadioButton
                android:id="@+id/south_america"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/south_america" />

        </RadioGroup>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/friends" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/friends_true"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_true" />

            <RadioButton
                android:id="@+id/friends_false"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_false" />

        </RadioGroup>

        <TextView
            style="@style/SubheadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/tiny_space"
            android:paddingTop="@dimen/medium_space"
            android:text="@string/scenes" />

        <CheckBox
            android:id="@+id/flood"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flood" />

        <CheckBox
            android:id="@+id/cinema"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cinema" />

        <CheckBox
            android:id="@+id/dance"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dance" />

        <CheckBox
            android:id="@+id/book"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/huge_space"
            android:layout_marginTop="@dimen/huge_space"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers" />

        <LinearLayout
            android:id="@+id/results_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/small_space"
            android:visibility="gone">

            <TextView
                android:id="@+id/score"
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/medium_space"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/congratulations"
                style="@style/SubheadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/medium_space"
                android:text="@string/congratulations" />

            <TextView
                android:id="@+id/poem"
                style="@style/PoemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poem" />

            <TextView
                android:id="@+id/retry"
                style="@style/SubheadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/retry" />

            <Button
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_space"
                android:layout_marginTop="@dimen/huge_space"
                android:onClick="startOver"
                android:text="@string/start_over" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>